# turtlebot4-object-detection

./: README.md
turtlebot4-object-detection/models/: code.py
turtlebot4-object-detection/turtlebot4_object_detection_ros2ws/src/turtlebot4_object_detection/: CMakeLists.txt  package.xml
turtlebot4-object-detection/turtlebot4_object_detection_ros2ws/src/turtlebot4_object_detection/scripts/: object_detection_node.py
