<package format="3">
  <name>turtlebot4_object_detection</name>
  <version>0.0.1</version>
  <description>Object detection using YOLOv8n on TurtleBot4 with ROS2</description>
  <maintainer email="yashgolani287@gmail.com">Yash Golani</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>opencv2</exec_depend>
</package>